--- a/.github/workflows/conf.yml
+++ b/.github/workflows/conf.yml
@@ -6,19 +6,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
     - name: Install Dependencies
-      run: npm install
+      run: echo "hi"
 
     - name: Run Tests
-      run: npm test
+      run: pwd
