--- a/.github/workflows/conf.yml
+++ b/.github/workflows/conf.yml
@@ -11,4 +11,4 @@ jobs:
       PASSWORD: ${{ secrets.CI_REGISTRY_PASSWORD }}
     steps:
     - name: Login to Docker Hub
-      run: echo $PASSWORD | docker login -u "tvoilex" --password-stdin docker.io
+      run: echo $PASSWORD | sudo docker login -u "tvoilex" --password-stdin docker.io
