--- a/.github/workflows/conf.yml
+++ b/.github/workflows/conf.yml
@@ -12,3 +12,11 @@ jobs:
     steps:
     - name: Login to Docker Hub
       run: echo $PASSWORD | sudo docker login -u "tvoilex" --password-stdin docker.io
+    - name: Docker Image build
+      run: docker-compose build
+    - name: Docker Tag
+    - run: docker tag node-js_nodejs_app docker.io/tvoilex/nodejs:{{ github.sha }}
+    - name: Push to Docker Hub
+    - run: docker push docker.io/tvoilex/nodejs:{{ github.sha }}
+
+
