--- a/.github/workflows/conf.yml
+++ b/.github/workflows/conf.yml
@@ -18,7 +18,7 @@ jobs:
       run:  echo ${{ github.sha }}
     - name: Docker Tag
       run: sudo docker tag node-js_nodejs_app:latest docker.io/tvoilex/nodejs:${{ github.sha }}
-    #- name: Push to Docker Hub
-    #  run: sudo docker push docker.io/tvoilex/nodejs:{{ github.sha }}
+    - name: Push to Docker Hub
+      run: sudo docker push docker.io/tvoilex/nodejs:{{ github.sha }}
 
 
