--- a/.github/workflows/conf.yml
+++ b/.github/workflows/conf.yml
@@ -20,5 +20,11 @@ jobs:
       run: sudo docker tag node-js_nodejs_app:latest docker.io/tvoilex/nodejs:${{ github.sha }}
     - name: Push to Docker Hub
       run: sudo docker push docker.io/tvoilex/nodejs:${{ github.sha }}
-
+  deploy:
+    runs-on: self-hosted
+    steps:
+    - name: Docker Pull
+      run: sudo docker pull docker.io/tvoilex/nodejs:${{ github.sha }}
+    - name: Docker build 
+      run: sudo docker-compose build --pull && sudo docker-compose down && sudo docker-compose up -d
 
