--- a/.github/workflows/conf.yml
+++ b/.github/workflows/conf.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: Docker Pull
-      run: sudo docker pull docker.io/tvoilex/nodejs:${{ github.sha }}
+      run: cd /home/nodejs/server/node-js && sudo docker pull docker.io/tvoilex/nodejs:${{ github.sha }}
     - name: Docker build 
-      run: sudo docker-compose build --pull && sudo docker-compose down && sudo docker-compose up -d
+      run: cd /home/nodejs/server/node-js && sudo docker-compose build --pull && sudo docker-compose down && sudo docker-compose up -d
 
