--- a/.github/workflows/conf.yml
+++ b/.github/workflows/conf.yml
@@ -13,19 +13,19 @@ jobs:
     - name: Login to Docker Hub
       run: echo -e "112211\nPassword1" | sudo -S docker login -u "tvoilex" --password-stdin docker.io
     - name: Docker Image build
-      run: cd /home/nodejs/server/node-js && sudo docker-compose build
+      run: cd /home/nodejs/server/node-js && echo 112211 | sudo -S docker-compose build
     - name: test
       run:  echo ${{ github.sha }}
     - name: Docker Tag
-      run: sudo docker tag node-js_nodejs_app:latest docker.io/tvoilex/nodejs:${{ github.sha }}
+      run: echo 112211 | sudo -S docker tag node-js_nodejs_app:latest docker.io/tvoilex/nodejs:${{ github.sha }}
     - name: Push to Docker Hub
-      run: sudo docker push docker.io/tvoilex/nodejs:${{ github.sha }}
+      run: echo 112211 | sudo -S docker push docker.io/tvoilex/nodejs:${{ github.sha }}
   deploy:
     runs-on: self-hosted
     needs: build
     steps:
     - name: Docker Pull
-      run: sudo docker pull docker.io/tvoilex/nodejs:${{ github.sha }}
+      run: echo 112211 | sudo -S docker pull docker.io/tvoilex/nodejs:${{ github.sha }}
     - name: Docker build 
-      run: cd /home/nodejs/server/node-js && sudo docker-compose build --pull && sudo docker-compose down && sudo docker-compose up -d
+      run: cd /home/nodejs/server/node-js && echo 112211 | sudo -S docker-compose build --pull && echo 112211 | sudo -S docker-compose down && sudo docker-compose up -d
 
